--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-DB_HOST=localhost
-DB_USER=postgres
-DB_PASSWORD=1234
-DB_NAME=payroll_db
-DB_PORT=5432
-
+DATABASE_URL="postgresql://username:password@localhost:5432/payroll_db?schema=public"
+JWT_SECRET="change_this_secret_key"
 PORT=3000
