--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
   "name": "payroll-system",
   "version": "1.0.0",
-  "description": "Payroll and payslip backend with Node.js, Express and Knex",
-  "main": "src/server.js",
+  "description": "Payroll and payslip backend with Node.js, Express and Prisma",
+  "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "migrate": "knex migrate:latest "
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js",
+    "seed": "node prisma/seed.js",
+    "migrate": "prisma migrate dev",
+    "migrate:prod": "prisma migrate deploy",
+    "migrate:reset": "prisma migrate reset",
+    "test": "jest"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "knex": "^2.5.1",
-    "pg": "^8.11.1"
+    "@faker-js/faker": "^8.4.1",
+    "@prisma/client": "^5.12.0",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "joi": "^17.12.0",
+    "jsonwebtoken": "^9.0.2",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
-  }
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "prisma": "^5.12.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "keywords": [],
+  "author": "walyxxi",
+  "license": "MIT"
 }
