--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.19.2",
     "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
-    "winston": "^3.13.0"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.13.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.27.4",
